source/calendar/calendar-styles.css
* {
  font-family: Rubik, sans-serif;
}

.todo-section {
  padding: 10px;
}

.rubik-font {
  font-family: Rubik, sans-serif;
  font-optical-sizing: auto;
  font-weight: 300;
  font-style: normal;
}

body {
  background: no-repeat center center fixed;
  background-size: cover;
  color: #333;
}

.diff-month {
  color: rgb(192, 189, 189);
  font-family: cursive;
}

.main-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  margin-right: 30px;
  margin-left: 30px;
  padding-top: 10px;
  padding-bottom: 15vh;
  flex-direction: row;
  background: linear-gradient(135deg, #439093, pink);
  gap: 10px;
}

.calendar-container {
  flex: 3;
  min-width: 300px;
  max-width: 600px;
}

.calendar-container,
.todo-list-container {
  flex: 1 0 300px;
  max-width: 600px;
}

.day-names {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
  padding: 0;
  padding-top: 10px;
  width: 660px;
  max-width: 660px;
  margin: auto;
}

.day-name {
  text-align: center;
  font-size: 120%;
  padding: 10px;
  background-color: rgba(255 255 255 / 80%);
  font-weight: bold;
  border: none;
  margin-top: 20px;
  color: rgba(15 106 108 / 805);
  font-family: serif;
}

/* Vertical layout for calendar and todo list if screen size is too small for readability */
@media (max-width: 1200px) {
  .main-container {
    flex-direction: column;
    align-items: center;
  }

  .calendar-container {
    width: 100%;
    flex: auto;
  }

  .day-names {
    width: 630px;
    flex-direction: row;
    align-items: center;
  }
}

/* DESKTOP RESPONSIVENESS BREAKPOINT */
@media (min-width: 1200px) {
  .main-container {
    flex-direction: row;
    align-items: flex-start;
    justify-content: center;
  }

  .calendar-container {
    width: 100%;
    max-width: 768px;
  }
}

.calendar-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 20px;
  background-color: rgba(242, 229, 241, 0.8);
  box-shadow: 0 6px 12px rgba(0 0 0 / 15%);
  margin-bottom: 10px;
  margin-right: 30px;
  margin-left: 30px;
  font-family: fantasy;
  font-weight: bold;
}

#calendar {
  display: grid;
  grid-template-columns: repeat(7, 1fr);
  gap: 10px;
  padding: 30px;
  background-color: rgba(255 255 255 / 80%);
  width: 95%;
  max-width: 600px;
  margin: auto;
  box-shadow: 0 6px 12px rgba(0 0 0 / 15%);
}
@keyframes fadeIn {
  from {
    opacity: 0;
    transform: translateY(10px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}
.fade-in {
  animation: fadeIn 0.5s forwards;
}

.day {
  padding: 15px 10px;
  background-color: #fff;
  border: none;
  border-radius: 10px;
  transition:
    background-color 0.3s,
    transform 0.3s;
}

.day.fade-in {
  animation: fadeIn 0.5s ease forwards;
}

.day:hover {
  transform: translateY(-3px);
  cursor: pointer;
  box-shadow: 0 4px 5px rgba(0 0 0 / 10%);
}

.current-day {
  color: #044c4d;
  font-weight: bold;
  font-family: cursive;
  padding: 10px 12px;
  border-radius: 10px;
  transition:
    background 0.3s ease,
    color 0.3s ease,
    transform 0.3s ease;
}

.current-day:hover {
  color: white !important;
  transform: scale(1.05);
}

.january {
  color: #187474;
  font-family: cursive;
}
.day.january:hover {
  background: linear-gradient(135deg, #02a2a8, pink);
  box-shadow: 0 3px 6px rgba(0 0 0 / 60%);
}
.current-day.january {
  background: linear-gradient(135deg, #439093, pink);
}
.current-day.january:hover {
  background: linear-gradient(135deg, #02a2a8, pink);
  box-shadow: 0 3px 6px rgba(0 0 0 / 60%);
}

.february {
  color: #187474;
  font-family: cursive;
}
.day.february:hover {
  background: linear-gradient(135deg, #02a2a8, pink);
  box-shadow: 0 3px 6px rgba(0 0 0 / 60%);
}
.current-day.february {
  background: linear-gradient(135deg, #439093, pink);
}
.current-day.february:hover {
  background: linear-gradient(135deg, #02a2a8, pink);
  box-shadow: 0 3px 6px rgba(0 0 0 / 60%);
}

.march {
  color: #187474;
  font-family: cursive;
}
.day.march:hover {
  background: linear-gradient(135deg, #02a2a8, pink);
  box-shadow: 0 3px 6px rgba(0 0 0 / 60%);
}
.current-day.march {
  background: linear-gradient(135deg, #439093, pink);
}
.current-day.march:hover {
  background: linear-gradient(135deg, #02a2a8, pink);
  box-shadow: 0 3px 6px rgba(0 0 0 / 60%);
}

.april {
  color: #187474;
  font-family: cursive;
}
.day.april:hover {
  background: linear-gradient(135deg, #02a2a8, pink);
  box-shadow: 0 3px 6px rgba(0 0 0 / 60%);
}
.current-day.april {
  background: linear-gradient(135deg, #439093, pink);
}
.current-day.april:hover {
  background: linear-gradient(135deg, #02a2a8, pink);
  box-shadow: 0 3px 6px rgba(0 0 0 / 60%);
}

.may {
  color: #187474;
  font-family: cursive;
}
.day.may:hover {
  background: linear-gradient(135deg, #02a2a8, pink);
  box-shadow: 0 3px 6px rgba(0 0 0 / 60%);
}
.current-day.may {
  background: linear-gradient(135deg, #439093, pink);
}
.current-day.may:hover {
  background: linear-gradient(135deg, #02a2a8, pink);
  box-shadow: 0 3px 6px rgba(0 0 0 / 60%);
}

.june {
  color: #187474;
  font-family: cursive;
}
.day.june:hover {
  background: linear-gradient(135deg, #02a2a8, pink);
  box-shadow: 0 3px 6px rgba(0 0 0 / 60%);
}
.current-day.june {
  background: linear-gradient(135deg, #439093, pink);
}
.current-day.june:hover {
  background: linear-gradient(135deg, #02a2a8, pink);
  box-shadow: 0 3px 6px rgba(0 0 0 / 60%);
}

.july {
  color: #187474;
  font-family: cursive;
}
.day.july:hover {
  background: linear-gradient(135deg, #02a2a8, pink);
  box-shadow: 0 3px 6px rgba(0 0 0 / 60%);
}
.current-day.july {
  background: linear-gradient(135deg, #439093, pink);
}
.current-day.july:hover {
  background: linear-gradient(135deg, #02a2a8, pink);
  box-shadow: 0 3px 6px rgba(0 0 0 / 60%);
}

.august {
  color: #187474;
  font-family: cursive;
}
.day.august:hover {
  background: linear-gradient(135deg, #02a2a8, pink);
  box-shadow: 0 3px 6px rgba(0 0 0 / 60%);
}
/* ... */

